--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "express-validator": "^6.14.2"
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
