--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "express-validator": "^6.14.2",
-    "mongoose": "^6.8.1",
-    "multer": "^1.4.5-lts.1"
+    "express-validator": "^5.3.0",
+    "mongoose": "^5.3.2",
+    "multer": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
