--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 5000",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -24,6 +24,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^1.18.4",
+    "sinon": "^15.0.1"
   }
 }
